# quantPlus

./: .gitattributes  .gitignore  .gitmodules  README.md  development.md  main.py  pyproject.toml
.vntrader/: database.db-journal
docs/: ctptest_guide.md  data_directory_guide.md  debug.md  development.md  enhanced_chart_development.md  headless_recorder.md  iter14_baseline_params.md  openctp_integration_research.md  openctp_quickstart.md  quickstart_chart_recorder.md  strategy_design.md  trade_all_features.md  v3_production_fixes.md
experiments/: gap_analysis.py  gap_analysis_results.json  gap_analysis_simple.py  iter5_P2601_trades_gap4.csv  iter5_P2601_trades_gap7.csv  iter5_claude_diagnosis.md  iter5_diagnose_contracts.py  vnpy_compat_full_output.txt  vnpy_compat_output.txt
scripts/: analyze_contracts.py  analyze_gap_trades.py  analyze_p2201_gaps.py  backtest_diagnostic.py  backtest_p2601_chan.py  backtest_v2_filters.py  backtest_with_pivot_sm.py  check_sensitive_info.py  check_sep_gaps.py  compare_cb_fix.py  compare_cb_triggers.py  compare_p2201_trades.py  convert_png_to_ico.py  debug_labor_day.py  debug_s27.py  debug_s27_trigger.py  deep_diag_p2401_p2601.py  diag_gap_chanlun.py  diag_holding_profit.py  diag_holiday_overnight.py  diag_isolate_v3.py  diag_iter12.py  diag_iter7.py  diag_iter9.py  diag_live_safety.py  diag_neg.py  diag_p2401_deep.py  diag_postholiday_trades.py  diag_r1.py  diag_short_holds.py  diag_trades.py  diagnose_gap_trades.py  diagnose_holiday_gap.py  diagnose_trades.py  export_trades.py  grid_atr.py  grid_buffer.py  grid_cooldown.py  (+45 more)
(+744 files in other folders)
